<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Genre">

    <Button
            android:text="@string/genre1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/button2"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/genre2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/button3"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/button"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/genre3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/button2"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/genre4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/button5"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/genre5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" app:layout_constraintStart_toEndOf="@+id/button4"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/button6"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/genre6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/button5"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/genre7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/button8"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/genre8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button5" app:layout_constraintEnd_toStartOf="@+id/button9"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/button7"/>
    <Button
            android:text="@string/genre9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button6" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/button8"
            android:layout_marginStart="8dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button10" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button7" app:layout_constraintEnd_toStartOf="@+id/button11"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/genre10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button11" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button8" app:layout_constraintEnd_toStartOf="@+id/button12"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/button10"/>
    <Button
            android:text="@string/genre11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button12" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button9" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/button11"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>